<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.MonthlyTrackingFragment">

    <data>
        <import type="com.nrlm.agey.ui.home.HomeViewModel"/>
        <import type="com.nrlm.agey.model.TestObject"/>
        <import type="android.view.View"/>
        <import type="com.nrlm.agey.database.entity.AssignVehicleDataEntity"/>
        <variable name="viewModel" type="HomeViewModel"/>
        <variable name="testObj" type="TestObject" />
        <variable name="assignVehicleModel" type="AssignVehicleDataEntity" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/top_card_view"
            style="@style/carViewTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/brown_200"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_5dp"
                        android:layout_weight="0.9"
                        android:fontFamily="@font/manrope_extra_bold"
                        android:padding="@dimen/space_2dp"
                        android:text="@string/tv_reg_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16sp" />

                    <TextView
                        android:id="@+id/tv_regNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/space_5dp"
                        android:layout_weight="1.1"
                        android:fontFamily="@font/manrope_extra_bold"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/space_2dp"
                        android:text="HR-12U-2871"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16sp" />

                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_card_view"
            android:layout_above="@+id/btn_next"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView style="@style/carViewTheme">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_5dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ttl_selectCat"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_vehicle_cat"
                            android:padding="3dp">

                            <AutoCompleteTextView
                                android:id="@+id/spinner_selectCat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="none"
                                android:textColor="@color/black"
                                android:focusableInTouchMode="false"
                                android:focusable="false"
                                android:textSize="15dp" />

                        </com.google.android.material.textfield.TextInputLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/toast_error_select_month"
                                android:padding="3dp">

                                <AutoCompleteTextView
                                    android:id="@+id/et_selectMonth"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:focusableInTouchMode="false"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:inputType="none"
                                    android:textColor="@color/black"
                                    android:textSize="15dp" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/ttl_select_year"
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/toast_error_select_year"
                                android:padding="3dp">

                                <AutoCompleteTextView
                                    android:id="@+id/et_select_year"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:inputType="none"
                                    android:textColor="@color/black"
                                    android:textSize="15dp" />

                            </com.google.android.material.textfield.TextInputLayout>



                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView style="@style/carViewTheme">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/brown_200"
                            android:fontFamily="@font/montserrat_regular"
                            android:paddingLeft="@dimen/space_5dp"
                            android:text="@string/tv_km_reading"
                            android:textColor="@color/black" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_km_opening"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_openingKm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLength="7"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_km_closing"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:text="@{testObj.clossingKm}"
                                android:id="@+id/et_closingKm"
                                android:maxLength="7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_km_total"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_totlKm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView style="@style/carViewTheme">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/brown_200"
                            android:fontFamily="@font/montserrat_regular"
                            android:paddingLeft="@dimen/space_5dp"
                            android:text="@string/tv_payment_detail"
                            android:textColor="@color/black" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_amount_repaid_current"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_amountRepaid"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_amount_balance_loan"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_blancedAmount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_emi_overdue"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_noOfEmi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_amount_overdue"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_amountOverdue"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:hint="@string/tv_monthly_income"
                            android:padding="3dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_monthlyIncome"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:inputType="number" />
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>




        </ScrollView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/IconTextContainedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/space_10dp"
            android:layout_marginRight="@dimen/space_10dp"
            android:layout_marginBottom="@dimen/space_10dp"
            android:fontFamily="@font/manrope_semi_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_next"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_arrow_next"
            app:iconGravity="textEnd"/>

    </RelativeLayout>

</layout>